--- a/project.inlang/settings.json
+++ b/project.inlang/settings.json
@@ -7,6 +7,5 @@
 	"plugin.inlang.messageFormat": {
 		"pathPattern": "./messages/{locale}.json"
 	},
-	"baseLocale": "en",
-	"locales": ["en", "zh"]
+	"locales": ["en", "zh", "zh_py"]
 }
