feat: featured page, update Splash and header

--- a/project.inlang/settings.json
+++ b/project.inlang/settings.json
@@ -7,5 +7,6 @@
 	"plugin.inlang.messageFormat": {
 		"pathPattern": "./messages/{locale}.json"
 	},
+	"baseLocale": "en",
 	"locales": ["en", "zh", "zh_py"]
 }
