--- a/project.inlang/settings.json
+++ b/project.inlang/settings.json
@@ -8,5 +8,5 @@
 		"pathPattern": "./messages/{locale}.json"
 	},
 	"baseLocale": "en",
-	"locales": ["en", "zh"]
+	"locales": ["en", "zh", "zh_py"]
 }
