--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"lint": "prettier --check . && eslint ."
 	},
 	"devDependencies": {
-	"@eslint/compat": "^1.2.5",
+		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "^9.18.0",
 		"@sveltejs/adapter-auto": "^6.0.0",
 		"@sveltejs/kit": "^2.22.0",
@@ -36,6 +36,7 @@
 	"dependencies": {
 		"@inlang/paraglide-js": "^2.0.0",
 		"d3-selection": "^3.0.0",
-		"d3-zoom": "^3.0.0"
+		"d3-zoom": "^3.0.0",
+		"pdfjs-dist": "^5.4.149"
 	}
 }
