--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
 		"vite": "^7.0.4"
 	},
 	"dependencies": {
+		"@ibm/plex-sans": "^1.1.0",
+		"@ibm/plex-sans-sc": "^1.1.0",
+		"@ibm/plex-sans-tc": "^1.1.1",
 		"@inlang/paraglide-js": "^2.0.0",
 		"d3-selection": "^3.0.0",
 		"d3-zoom": "^3.0.0",
