update default restart policy

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   cua_web:
     build: .
     container_name: cua_web
-    restart: unless-stopped
+    restart: always
     env_file: .env
     ports:
       - '8002:4800'
