--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -5,7 +5,7 @@ on:
   push:
     # Runs on pushes to the default branch (usually main or master)
     branches:
-      - 'release'
+      - 'dev'
 
 concurrency:
   group: dev-deploy # any unique string
